--- a/asr_api_service/pyproject.toml
+++ b/asr_api_service/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "rich>=13.7.0",
     "typer>=0.9.0",
     "asyncio-mqtt>=0.16.1",
+    "soundfile>=0.12.1",
 ]
 
 [project.optional-dependencies]
